# folio-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE_CODE_PROMPT.md  Cargo.toml  Dockerfile  PLAN-issues-mitigation.md  README.md  SPEC-llm-experience.md  all.md  docker-compose.yml  mcp-config.example.json
.claude/: settings.local.json
data/examples/: compound_interest.fmd  datetime_calculations.fmd  datetime_shortcuts.fmd  finance_test.fmd  isis_analysis.fmd  matrix_test.fmd  mortgage.fmd  phi_properties.fmd  portfolio-risk-analysis.fmd  trig_identities.fmd  unit_conversions.fmd  workdays.fmd
examples/: finance_test.fmd  matrix_test.fmd  units_test.fmd
folio/: Cargo.toml
folio-core/: Cargo.toml
folio-core/src/: datetime.rs  error.rs  lib.rs  number.rs  value.rs
folio-finance/: Cargo.toml
folio-finance/src/: bonds.rs  depreciation.rs  helpers.rs  lib.rs  loans.rs  rates.rs  returns.rs  tvm.rs
folio-isis/: Cargo.toml
folio-isis/src/: analyzers.rs  lib.rs  transform.rs
folio-kitchen/: Cargo.toml
folio-kitchen/src/: cooking.rs  density.rs  helpers.rs  lib.rs  scaling.rs  temperature.rs
folio-matrix/: Cargo.toml
folio-matrix/src/: construct.rs  decompose.rs  helpers.rs  lib.rs  norms.rs  ops.rs  props.rs  solve.rs  types.rs  vector_ops.rs
folio-mcp/: Cargo.toml
folio-mcp/src/: main.rs
folio-plugin/: Cargo.toml
folio-plugin/src/: context.rs  lib.rs  registry.rs  traits.rs
folio-sequence/: Cargo.toml
folio-sequence/src/: expr.rs  generators.rs  helpers.rs  lib.rs  named.rs  pattern.rs  recurrence.rs  series.rs
folio-stats/: Cargo.toml
folio-stats/src/: bivariate.rs  central.rs  confidence.rs  dispersion.rs  goodness.rs  helpers.rs  histogram.rs  hypothesis.rs  lib.rs  outliers.rs  position.rs  qq.rs  regression.rs  shape.rs  transform.rs
folio-stats/src/distributions/: chi.rs  discrete.rs  f.rs  mod.rs  normal.rs  t.rs
folio-std/: Cargo.toml
folio-std/src/: constants.rs  lib.rs
folio-std/src/analyzers/: e.rs  mod.rs  phi.rs  pi.rs
folio-std/src/commands/: explain.rs  mod.rs  trace.rs
folio-std/src/functions/: aggregate.rs  datetime.rs  math.rs  mod.rs  trig.rs  utility.rs
folio-text/: Cargo.toml
folio-text/src/: extract.rs  helpers.rs  join.rs  lib.rs  modify.rs  parse.rs  search.rs  transform.rs  validate.rs
folio-units/: Cargo.toml
folio-units/src/: convert.rs  dimension.rs  lib.rs  parse.rs  quantity.rs  unit.rs  units.rs
folio/src/: ast.rs  eval.rs  lib.rs  parser.rs  render.rs
specs/: SPEC-matrix.md  SPEC-sequences.md  SPEC-text.md
specs/done/: SPEC-distribution-analysis.md  SPEC-finance.md  SPEC-statistics.md  SPEC-units.md
