[package]
name = "folio-core"
description = "Core types for Folio: Number, Value, Error"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
