[package]
name = "folio-core"
description = "Core types for Folio: Number, Value, Error"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Arbitrary precision - dashu replaces num-bigint/num-rational
dashu-base = { workspace = true }
dashu-int = { workspace = true }
dashu-ratio = { workspace = true }
dashu-float = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
