[package]
name = "folio-matrix"
description = "Matrix and linear algebra functions for Folio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
folio-core = { path = "../folio-core" }
folio-plugin = { path = "../folio-plugin" }
serde = { workspace = true }

# Pure Rust linear algebra - no BLAS dependencies
nalgebra = "0.33"
