[package]
name = "folio-mcp"
description = "MCP Server for Folio"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "folio-mcp"
path = "src/main.rs"

[dependencies]
folio = { path = "../folio" }
folio-core = { path = "../folio-core" }
folio-plugin = { path = "../folio-plugin" }
folio-std = { path = "../folio-std" }
folio-isis = { path = "../folio-isis" }
folio-stats = { path = "../folio-stats" }
folio-sequence = { path = "../folio-sequence" }
folio-finance = { path = "../folio-finance" }
folio-matrix = { path = "../folio-matrix" }
folio-units = { path = "../folio-units" }
folio-text = { path = "../folio-text" }
folio-kitchen = { path = "../folio-kitchen" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
