[package]
name = "folio-std"
description = "Standard library for Folio: math functions, analyzers, constants"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
folio-core = { path = "../folio-core" }
folio-plugin = { path = "../folio-plugin" }
serde = { workspace = true }
