[package]
name = "folio-text"
description = "Text manipulation functions for Folio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
folio-core = { path = "../folio-core" }
folio-plugin = { path = "../folio-plugin" }
regex = "1.10"
serde = { workspace = true }
