[package]
name = "folio"
description = "Markdown Computational Documents - Jupyter for LLMs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
folio-core = { path = "../folio-core" }
folio-plugin = { path = "../folio-plugin" }
folio-std = { path = "../folio-std" }
folio-stats = { path = "../folio-stats" }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
